<resources>
    <string name="app_name">Warehouse Manager</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="orange_wave">Orange Wave</string>
    <string name="item_name">Item Name</string>
    <string name="sku">SKU</string>
    <string name="item_count">Item Count</string>
    <string name="green_add_button">Green Add Button</string>
    <string name="add_photo">Add Photo</string>
    <string name="notification_threshold">Notification Settings:</string>
    <string name="quantity_user_check">How low can an item\'s quantity get before we message you?</string>
    <string name="update">Update</string>
    <string name="emulator_number">+1 555-123-4567</string>
    <string name="number_ask">What phone number should we send SMS updates to?</string>
    <string name="add">Add</string>
    <string name="camera">camera</string>
    <string name="name">Name:</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="sku_add">SKU:</string>
    <string name="enter_item_sku">Enter Item SKU</string>
    <string name="quantity">Quantity:</string>
    <string name="_0">0</string>
    <string name="increase">+</string>
    <string name="decrease">-</string>
    <string name="textview">textView</string>
    <string name="skuview">skuView</string>
    <string name="countview">countView</string>

    <string-array name="warehouse_array">
        <item>Warehouse 1</item>
        <item>Warehouse 2</item>
    </string-array>

</resources>