<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainLayout">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/itemRecycler"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"



        android:layout_marginTop="150dp"
        />

    <ImageButton
        android:id="@+id/pref_button"

        style="@style/PrefButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"

        android:layout_marginTop="30dp"

        android:background="@drawable/circle_button"
        android:onClick="onPrefClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_preferences" />

    <Spinner
        android:id="@+id/warehouse"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="45dp"
        android:spinnerMode="dropdown"

        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"

        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/item_name"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pref_button" />

    <TextView
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"

        android:gravity="center"
        android:text="@string/sku"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/warehouse" />

    <TextView
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"

        android:layout_marginEnd="4dp"
        android:gravity="center"
        android:text="@string/item_count"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/warehouse" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_button"

        style="@style/FloatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/green_add_button"
        android:onClick="onFloatClick"
        android:src="@drawable/plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="75dp" />

</androidx.constraintlayout.widget.ConstraintLayout>